[tool.poetry]
authors = ["Jason Xia <jasonxh@gmail.com>"]
description = "A simple bridge between Arlo and MQTT."
name = "arlo-mqtt"
version = "0.1.0"

[tool.poetry.scripts]
arlo-mqtt = "arlo_mqtt.cli:main"

[tool.poetry.dependencies]
python = "^3.7"

Homie3 = "^0.3.0"
pyaarlo = "^0.7.1"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.7"
ipykernel = "^6.0.1"
mypy = "^0.910"

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = [
  "homie.*",
  "pyaarlo.*",
]

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
